SOC-3395 | fix: align reply images to content

--- a/front/main/app/styles/module/_discussion.scss
+++ b/front/main/app/styles/module/_discussion.scss
@@ -475,6 +475,10 @@ body.discussions {
 			font-size: .75rem;
 		}
 
+		.post-images {
+			margin-left: 22px;
+		}
+
 		.upvotes {
 			float: left;
 			margin: -5px $post-details-reply-upvote-margin-left 0 0;
